--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.fosung.userdemo"
+        applicationId "com.fosung.usedemo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
@@ -19,6 +19,10 @@ android {
 
         // dex突破65535的限制
         //multiDexEnabled true
+        
+        ndk {
+            abiFilters  "armeabi-v7a"  // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
+        }
     }
 
 //    signingConfigs {
@@ -53,9 +57,9 @@ android {
             buildConfigField "boolean", "LOG_DEBUG", "false"// 显示Log
             buildConfigField "boolean", "LOG_WRITE", "false"//sd中写log信息
 
-            minifyEnabled true
+            minifyEnabled false
             shrinkResources false  //移除无用的resource文件（如果使用getIdentifier函数的需要关闭）
-            zipAlignEnabled true  //Zipalign优化
+            zipAlignEnabled false  //Zipalign优化
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
@@ -77,7 +81,7 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
  
     compile 'com.github.zcolin:zcolin_IjkPlayerLib:1.0.0'//视频播放
-    compile 'com.github.zcolin:zcolin_EasyPRLib:1.0.0'//车牌识别
+    compile 'com.github.zcolin:zcolin_EasyPRLib:1.0.1'//车牌识别
     compile 'com.github.zcolin:zcolin_FrameTemplateLib:1.0.1'//程序框架 
     compile 'com.github.zcolin:zcolin_BarcodeScannerLib:1.0.0'//二维码扫描
     compile 'com.github.zcolin:zcolin_MultiImageSelectorLib:1.0.0'//多图选择    
