--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,13 +80,13 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
 
-    compile 'com.github.zcolin:ZIjkPlayer:1.1.0'//视频播放
-    compile 'com.github.zcolin:ZEasyPR:1.0.9'//车牌识别
-    compile 'com.github.zcolin:ZFrameTemplate:1.0.7'//程序框架 
-    compile 'com.github.zcolin:ZBarCodeScanner:1.0.6'//二维码扫描
-    compile 'com.github.zcolin:ZMultiImageSelector:1.0.6'//多图选择    
-    compile 'com.github.zcolin:PullRecyclerView:1.0.6'//下拉刷新
-    compile 'com.github.zcolin:ZRecyclerView:1.0.2'//下拉刷新
+    compile 'com.github.zcolin:ZIjkPlayer:latest.release'//视频播放
+    compile 'com.github.zcolin:ZEasyPR:latest.release'//车牌识别
+    compile 'com.github.zcolin:ZFrameTemplate:latest.release'//程序框架 
+    compile 'com.github.zcolin:ZBarCodeScanner:latest.release'//二维码扫描
+    compile 'com.github.zcolin:ZMultiImageSelector:latest.release'//多图选择    
+    compile 'com.github.zcolin:PullRecyclerView:latest.release'//下拉刷新
+    compile 'com.github.zcolin:ZRecyclerView:latest.release'//下拉刷新
     compile project(path: ':libGui')
 }
 
