* 优化webview模块，将JsBridge移动到webview模块。 * 在ZWebView中添加setSupportJsBridge函数，需要则调用，默认不掉用 * 在ZWebView中增加视频全屏的功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,9 @@
         <activity android:name=".amodule.demo_image.ImageSelectorActivity"/>
         <activity android:name=".amodule.demo_image.ImageUtilActivity"/>
         <activity android:name=".amodule.demo_view.activity.WebViewActivity"/>
+        <activity
+            android:name=".amodule.demo_view.activity.WebViewVideoActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name=".amodule.demo_view.activity.PassDataActivity"/>
         <activity android:name=".amodule.demo_view.activity.PassDataActivity1"/>
         <activity android:name=".amodule.demo_view.activity.DialogActivity"/>
