# 更新greenDao3.x 实体关联数据库，不在单独使用工程生成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,12 +89,12 @@ dependencies {
 
     compile 'com.github.zcolin:ZIjkPlayer:latest.release'//视频播放
     compile 'com.github.zcolin:ZEasyPR:latest.release'//车牌识别
-    compile 'com.github.zcolin:ZFrameTemplate:1.1.7'//程序框架 
+    compile 'com.github.zcolin:ZFrameTemplate:latest.release'//程序框架 
     compile 'com.github.zcolin:ZBarCodeScanner:latest.release'//二维码扫描
     compile 'com.github.zcolin:ZMultiImageSelector:latest.release'//多图选择    
-    compile 'com.github.zcolin:PullRecyclerView:1.0.9'//下拉刷新
+    compile 'com.github.zcolin:PullRecyclerView:latest.release'//下拉刷新
     compile 'com.github.zcolin:ZRecyclerView:latest.release'//下拉刷新
-    compile 'com.github.zcolin:ZUILib:1.0.1'//UI库 
+    compile 'com.github.zcolin:ZUILib:latest.release'//UI库 
 }
 
 
