--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,24 +126,30 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-
-    compile 'com.github.zcolin:ZIjkPlayer:latest.release'//视频播放
-    compile 'com.github.zcolin:ZEasyPR:latest.release'//车牌识别
-    compile 'com.github.zcolin:ZFrame:latest.release'//程序框架 
-    compile 'com.github.zcolin:ZBarCodeScanner:latest.release'//二维码扫描
-    compile 'com.github.zcolin:ZMultiImageSelector:latest.release'//多图选择    
-    compile 'com.github.zcolin:PullRecyclerView:latest.release'//下拉刷新
-    compile 'com.github.zcolin:ZRecyclerView:latest.release'//下拉刷新
-    compile 'com.github.zcolin:ZUILib:latest.release'//UI库 
-
-//    facebook调试工具 使用chrome查看，可以进行数据库和http报文查看
-//    compile 'com.facebook.stetho:stetho:1.4.2'
-//    compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
-
+    compile 'com.github.zcolin:ZIjkPlayer:latest.release'
+    //视频播放
+    compile 'com.github.zcolin:ZEasyPR:latest.release'
+    //车牌识别
+    compile 'com.github.zcolin:ZFrame:latest.release'
+    //程序框架 
+    compile 'com.github.zcolin:ZBarCodeScanner:latest.release'
+    //二维码扫描
+    compile 'com.github.zcolin:ZMultiImageSelector:latest.release'
+    //多图选择    
+    compile 'com.github.zcolin:PullRecyclerView:latest.release'
+    //下拉刷新
+    compile 'com.github.zcolin:ZRecyclerView:latest.release'
+    //下拉刷新
+    compile 'com.github.zcolin:ZUILib:latest.release'
+    //UI库 
+    //    facebook调试工具 使用chrome查看，可以进行数据库和http报文查看
+    //    compile 'com.facebook.stetho:stetho:1.4.2'
+    //    compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
     //leakcanary
-//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-//    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-//    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    //    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    //    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    //    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile project(':outlib')
 }
 
 
