--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,9 +126,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.github.zcolin:ZIjkPlayer:latest.release'
+    compile 'com.github.zcolin:ZIjkPlayer:1.1.2'
     //视频播放
-    compile 'com.github.zcolin:ZEasyPR:latest.release'
+    compile 'com.github.zcolin:ZEasyPR:1.1.2'
     //车牌识别
     compile 'com.github.zcolin:ZFrame:latest.release'
     //程序框架 
