--- a/outlib/build.gradle
+++ b/outlib/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.github.zcolin:ZFrame:latest.release'
     //程序框架 
 }
