# 解决下载之后运行错误的问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,7 +142,7 @@ dependencies {
     //    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     //    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile project(':outlib')
-    compile project(':libAmapLocation')
+    compile project(':libAmapLocation1')
     compile project(':libShareSdk')
 }
 
