--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.github.zcolin:ZIjkPlayer:1.1.9'//视频播放
     compile 'com.github.zcolin:ZEasyPR:1.1.2'//车牌识别
-    compile 'com.github.zcolin:ZFrame:1.2.5'//程序框架 
+    compile 'com.github.zcolin:ZFrame:1.3.1'//程序框架 
     compile 'com.github.zcolin:ZBarCodeScanner:latest.release'//二维码扫描
     compile 'com.github.zcolin:ZMultiImageSelector:latest.release'//多图选择    
     compile 'com.github.zcolin:PullRecyclerView:latest.release'//下拉刷新
@@ -144,6 +144,11 @@ dependencies {
     //    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     //    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile project(':outlib')
+
+    // Dependencies for local unit tests
+    testCompile "junit:junit:4.12"
+    testCompile "org.mockito:mockito-all:1.10.19"
+    testCompile "org.hamcrest:hamcrest-all:1.3"
 }
 
 
