--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
 //        ndk {
 //            abiFilters "armeabi-v7a"  // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
 //        }
+        dataBinding {
+            enabled true
+        }
     }
 
     //签名配置
@@ -128,12 +131,12 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.github.zcolin:ZIjkPlayer:1.1.9'//视频播放
     compile 'com.github.zcolin:ZEasyPR:1.1.2'//车牌识别
-    compile 'com.github.zcolin:ZFrame:1.3.3'
+    compile 'com.github.zcolin:ZFrame:1.3.4' 
     compile 'com.github.zcolin:ZBarCodeScanner:latest.release'//二维码扫描
     compile 'com.github.zcolin:ZMultiImageSelector:latest.release'//多图选择    
     compile 'com.github.zcolin:PullRecyclerView:latest.release'//下拉刷新
     compile 'com.github.zcolin:ZRecyclerView:latest.release'//下拉刷新
-    compile 'com.github.zcolin:ZUILib:1.2.6'//UI库 
+    compile 'com.github.zcolin:ZUILib:1.3.0'//UI库 
     compile 'com.github.zcolin.TPartyLibs:libShareSdk:1.0.2'
     compile 'com.github.zcolin.TPartyLibs:libAmapLocation:1.0.2'
     //    facebook调试工具 使用chrome查看，可以进行数据库和http报文查看
