--- a/outlib/build.gradle
+++ b/outlib/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.github.zcolin:ZFrame:latest.release'
+    compile 'com.github.zcolin:ZUILib:latest.release'
     //程序框架 
 }
