--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ android {
         // dex突破65535的限制
         //multiDexEnabled true
 
-//        ndk {
-//            abiFilters "armeabi-v7a"  // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
-//        }
+        ndk {
+            abiFilters "armeabi-v7a"  // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
+        }
         dataBinding {
             enabled true
         }
@@ -132,11 +132,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    sourceSets {
-        main {
-            java.srcDirs = ['src/main/java']
-        }
-    }
+//    sourceSets {
+//        main {
+//            java.srcDirs = ['src/main/java']
+//        }
+//    }
 }
 
 //遍历打包文件
@@ -169,21 +169,21 @@ def getGitVersion() {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:recyclerview-v7:$supprotVersion"
-    implementation "com.android.support:cardview-v7:$supprotVersion"
-    implementation "com.android.support:design:$supprotVersion"
-    implementation "com.github.zcolin:ZIjkPlayer:latest.release"//视频播放
-    implementation "com.github.zcolin:ZEasyPR:latest.release"//车牌识别
-    implementation "com.github.zcolin:ZFrame:latest.release"
-    implementation "com.github.zcolin:ZBarCodeScanner:latest.release"//二维码扫描
-    implementation "com.github.zcolin:Matisse:latest.release"//多图选择    
-    implementation "com.github.zcolin:PullRecyclerView:latest.release"//下拉刷新
-    implementation "com.github.zcolin:ZRecyclerView:1.3.0+"//下拉刷新
-    implementation "com.github.zcolin:ZUILib:latest.release"//UI库 
-    implementation "com.github.zcolin.TPartyLibs:libShareSdk:latest.release"
-    implementation "com.github.zcolin.TPartyLibs:libAmapLocation:latest.release"
-    implementation 'com.github.zcolin:ZWebview:1.3'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile "com.android.support:recyclerview-v7:$supprotVersion"
+    compile "com.android.support:cardview-v7:$supprotVersion"
+    compile "com.android.support:design:$supprotVersion"
+    compile "com.github.zcolin:ZIjkPlayer:1.2.6"//视频播放
+    compile "com.github.zcolin:ZEasyPR:latest.release"//车牌识别
+    compile "com.github.zcolin:ZFrame:latest.release"
+    compile "com.github.zcolin:ZBarCodeScanner:latest.release"//二维码扫描
+    compile "com.github.zcolin:Matisse:latest.release"//多图选择    
+    compile "com.github.zcolin:PullRecyclerView:latest.release"//下拉刷新
+    compile "com.github.zcolin:ZRecyclerView:1.3.0+"//下拉刷新
+    compile "com.github.zcolin:ZUILib:latest.release"//UI库 
+    compile "com.github.zcolin.TPartyLibs:libShareSdk:latest.release"
+    compile "com.github.zcolin.TPartyLibs:libAmapLocation:latest.release"
+    compile 'com.github.zcolin:ZWebview:1.3'
     //    facebook调试工具 使用chrome查看，可以进行数据库和http报文查看
     //    implementation "com.facebook.stetho:stetho:1.4.2"
     //    implementation "com.facebook.stetho:stetho-okhttp3:1.4.2"
@@ -191,7 +191,7 @@ dependencies {
     //    debugimplementation "com.squareup.leakcanary:leakcanary-android:1.5"
     //    releaseimplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.5"
     //    testimplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.5"
-    implementation project(":outlib")
+    compile project(":outlib")
 
     // Dependencies for local unit tests
     testImplementation "junit:junit:4.11"
