--- a/app/build.gradle
+++ b/app/build.gradle
@@ -169,21 +169,22 @@ def getGitVersion() {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "com.android.support:recyclerview-v7:$supprotVersion"
-    compile "com.android.support:cardview-v7:$supprotVersion"
-    compile "com.android.support:design:$supprotVersion"
-    compile "com.github.zcolin:ZIjkPlayer:1.2.6"//视频播放
-    compile "com.github.zcolin:ZEasyPR:latest.release"//车牌识别
-    compile "com.github.zcolin:ZFrame:latest.release"
-    compile "com.github.zcolin:ZBarCodeScanner:latest.release"//二维码扫描
-    compile "com.github.zcolin:Matisse:latest.release"//多图选择    
-    compile "com.github.zcolin:PullRecyclerView:latest.release"//下拉刷新
-    compile "com.github.zcolin:ZRecyclerView:1.3.0+"//下拉刷新
-    compile "com.github.zcolin:ZUILib:latest.release"//UI库 
-    compile "com.github.zcolin.TPartyLibs:libShareSdk:latest.release"
-    compile "com.github.zcolin.TPartyLibs:libAmapLocation:latest.release"
-    compile 'com.github.zcolin:ZWebview:1.3'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:$supprotVersion"
+    implementation "com.android.support:cardview-v7:$supprotVersion" 
+    implementation "com.android.support:recyclerview-v7:$supprotVersion"
+    implementation "com.android.support:design:$supprotVersion"
+    implementation "com.github.zcolin:ZIjkPlayer:2.0.0"//视频播放
+    implementation "com.github.zcolin:ZEasyPR:1.1.2" //车牌识别 
+    implementation "com.github.zcolin:ZFrame:2.0.0"
+    implementation "com.github.zcolin:ZBarCodeScanner:2.0.0"//二维码扫描
+    implementation "com.github.zcolin:Matisse:2.0.0"//多图选择    
+    implementation "com.github.zcolin:PullRecyclerView:2.0.0"//下拉刷新
+    implementation "com.github.zcolin:ZRecyclerView:2.0.0"//下拉刷新 
+    implementation "com.github.zcolin:ZUILib:2.0.0"//UI库 
+    implementation "com.github.zcolin.TPartyLibs:libShareSdk:1.1.4" 
+    implementation "com.github.zcolin.TPartyLibs:libAmapLocation:1.1.4" 
+    implementation 'com.github.zcolin:ZWebview:2.0.0'
     //    facebook调试工具 使用chrome查看，可以进行数据库和http报文查看
     //    implementation "com.facebook.stetho:stetho:1.4.2"
     //    implementation "com.facebook.stetho:stetho-okhttp3:1.4.2"
@@ -191,10 +192,10 @@ dependencies {
     //    debugimplementation "com.squareup.leakcanary:leakcanary-android:1.5"
     //    releaseimplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.5"
     //    testimplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.5"
-    compile project(":outlib")
+    implementation project(":outlib")
 
     // Dependencies for local unit tests
-    testImplementation "junit:junit:4.11"
+    testImplementation "junit:junit:4.12"
     // required if you want to use Mockito for unit tests
     testImplementation "org.mockito:mockito-core:1.9.5"
     // required if you want to use Powermock for unit tests
