--- a/outlib/build.gradle
+++ b/outlib/build.gradle
@@ -22,11 +22,13 @@ android {
     }
 }
 
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "com.android.support:appcompat-v7:$supprotVersion"
-    compile "com.android.support:recyclerview-v7:$supprotVersion"
-    compile "com.github.zcolin:ZFrame:latest.release"
-    compile "com.github.zcolin:ZUILib:latest.release"
+dependencies {  
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    compileOnly "com.android.support:appcompat-v7:$supprotVersion"
+    compileOnly "com.android.support:recyclerview-v7:$supprotVersion"
+    compileOnly "com.android.support:cardview-v7:$supprotVersion"
+    compileOnly "com.android.support:design:$supprotVersion"  
+    compileOnly "com.github.zcolin:ZFrame:2.0.0" 
+    compileOnly "com.github.zcolin:ZUILib:2.0.0"
     //程序框架 
 }
